# django-blog

./: db.sqlite3  pyproject.toml  render.yaml
blog/: admin.py  models.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_category_options.py
blog/templates/blog/: detail.html  index.html
personal_blog/: settings.py  urls.py
